I'm such an idiot.

--- a/config/options.ini
+++ b/config/options.ini
@@ -11,12 +11,12 @@
 ;Email = robinson.gl@hotmail.com
 ;Password = robingl24!!
 ; If you have a bot account, use this line instead.  Comment or remove the Email/Password options and uncomment the Token line.
-Token = MTYzNjk4NzMwODY2OTY2NTI4.CfVYUA.1N8bsXtXlJr4d_kQdELJCStdVQg
+Token = []
 
 [Permissions]
 ; This need to be your id, not the bot's id.  The bot does not own the bot.  You do.
 ; If you don't know how to get this, join the help server (link in the readme) *with the owner's account* and type !id in chat
-OwnerID = 117678528220233731
+OwnerID = []
 
 [Chat]
 ; Change this if you don't want commands to trigger another bot
