reset to example

--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -7,20 +7,23 @@
 ; Currently the bot does not overwrite any settings, but this may change in a future update.
 
 [Credentials]
+; The bot needs its own account to run on (not yours)
+Email = bot_discord@email
+Password = bot_discord_password
 ; If you have a bot account, use this line instead.  Comment or remove the Email/Password options and uncomment the Token line.
-Token = []
+;Token = bot_token
 
 [Permissions]
 ; This need to be your id, not the bot's id.  The bot does not own the bot.  You do.
 ; If you don't know how to get this, join the help server (link in the readme) *with the owner's account* and type !id in chat
-OwnerID = []
+OwnerID = 000000000000000000
 
 [Chat]
 ; Change this if you don't want commands to trigger another bot
 ; Example:
 ;	CommandPrefix = *
 ; This means you use *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
-CommandPrefix = .
+CommandPrefix = !
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
@@ -42,7 +45,7 @@ WhiteListCheck = no
 ; Skips required to skip a song.  Whichever is lower will be used.
 ; Skip ratio refers to the percent of non-deafened, non-owner users
 ; in the voice channel needed to skip a song.
-SkipsRequired = 2
+SkipsRequired = 4
 SkipRatio = 0.5
 
 ; If no, delete videos after they've played, if the video
@@ -50,7 +53,7 @@ SkipRatio = 0.5
 SaveVideos = yes
 
 ; Mentions the user who queued a song when the song plays
-NowPlayingMentions = yes
+NowPlayingMentions = no
 
 ; On start up, if the owner is in a voice channel, join that channel
 AutoSummon = yes
@@ -58,6 +61,9 @@ AutoSummon = yes
 ; Play random songs when nothing is queued
 UseAutoPlaylist = yes
 
+; When no one else is in the voice channel, pause the music, and resume when someone joins again
+AutoPause = yes
+
 ; Prints extra output in the console and some errors to chat.
 ; This option is a work in progress, don't expect much.  You might as well just leave it on for now.
-DebugMode = yes
+DebugMode = no
