--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -23,7 +23,7 @@ OwnerID = 000000000000000000
 ; Example:
 ;	CommandPrefix = *
 ; This means you use *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
-CommandPrefix = !
+CommandPrefix = .
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
