--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -23,7 +23,7 @@ OwnerID = 000000000000000000
 ; Example:
 ;	CommandPrefix = *
 ; This means you use *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
-CommandPrefix = .
+CommandPrefix = !
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
@@ -32,7 +32,15 @@ CommandPrefix = .
 ; Example: BindToChannels = 41000000000000005 41000000000000007
 ; (Don't use these ids, they won't work)
 ; This next line is the one you uncomment to use the option:
-;BindToChannels =
+;
+; BindToChannels =
+;
+
+; Join a channel on startup.  Multiple channels can be added for multiple servers. Remember, use IDs, not names.
+; If both this option and AutoSummon are enabled, this option takes priority.
+;
+; AutojoinChannels =
+;
 
 [MusicBot]
 ; The starting volume of the bot.  You can use any value from 0.01 to 1.0 but 0.15 is probably fine
