--- a/config/example_permissions.ini
+++ b/config/example_permissions.ini
@@ -63,10 +63,10 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = play perms queue np skip search id help
+CommandWhitelist = play perms queue np skip search id help summon pause talk
 ; CommandBlacklist =
 IgnoreNonVoice = play skip search
-; GrantToRoles =
+; GrantToRoles = 
 ; UserList =
 MaxSongLength = 1200
 MaxSongs = 0
@@ -76,7 +76,7 @@ AllowPlaylists = yes
 ; This group has full permissions.
 [MusicMaster]
 ; GrantToRoles =
-; UserList =
+; UserList = 
 MaxSongLength = 0
 MaxSongs = 0
 MaxPlaylistLength = 0
@@ -85,7 +85,7 @@ AllowPlaylists = yes
 ; This group can't use the blacklist, whitelist, and listroles commands, but otherwise has full permissions.
 [DJ]
 CommandBlacklist = blacklist whitelist listroles
-; GrantToRoles =
+; GrantToRoles = 
 ; UserList =
 MaxSongLength = 0
 MaxSongs = 0
