--- a/config/example_permissions.ini
+++ b/config/example_permissions.ini
@@ -63,9 +63,9 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = play perms queue np skip search id help summon pause talk dab
+CommandWhitelist = play perms queue np skip search id help summon pause talk dab kill
 ; CommandBlacklist =
-IgnoreNonVoice = play skip search
+IgnoreNonVoice = skip
 ; GrantToRoles = 
 ; UserList =
 MaxSongLength = 1200
