--- a/config/example_permissions.ini
+++ b/config/example_permissions.ini
@@ -63,7 +63,7 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = play perms queue np skip search id help summon pause talk dab kill
+CommandWhitelist = play perms queue np skip search id help summon pause talk dab kill date
 ; CommandBlacklist =
 IgnoreNonVoice = skip
 ; GrantToRoles = 
