i've been missing alot today

--- a/config/example_permissions.ini
+++ b/config/example_permissions.ini
@@ -66,7 +66,7 @@
 
 ; This is the fallback group for any users that don't get assigned to another group.  Don't remove/rename this group.
 [Default]
-CommandWhitelist = play perms queue np skip search id help clean shuffle kys kill test talk ship
+CommandWhitelist = play perms queue np skip search id help summon pause resume talk kys ship test kill date say shuffle dab date 
 ; CommandBlacklist =
 IgnoreNonVoice = play skip search
 ; GrantToRoles =
