--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -8,22 +8,22 @@
 
 [Credentials]
 ; The bot needs its own account to run on (not yours)
-Email = bot_discord@email
-Password = bot_discord_password
+;Email = 
+;Password = 
 ; If you have a bot account, use this line instead.  Comment or remove the Email/Password options and uncomment the Token line.
-;Token = bot_token
+Token = 
 
 [Permissions]
 ; This need to be your id, not the bot's id.  The bot does not own the bot.  You do.
 ; If you don't know how to get this, join the help server (link in the readme) *with the owner's account* and type !id in chat
-OwnerID = 000000000000000000
+OwnerID = 
 
 [Chat]
 ; Change this if you don't want commands to trigger another bot
 ; Example:
 ;	CommandPrefix = *
 ; This means you use *play, *skip, etc.  This explanation exists because it seems no one knows what "prefix" means.
-CommandPrefix = .
+CommandPrefix = *
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
@@ -33,13 +33,13 @@ CommandPrefix = .
 ; (Don't use these ids, they won't work)
 ; This next line is the one you uncomment to use the option:
 ;
-; BindToChannels =
+;BindToChannels =
 ;
 
 ; Join a channel on startup.  Multiple channels can be added for multiple servers. Remember, use IDs, not names.
 ; If both this option and AutoSummon are enabled, this option takes priority.
 ;
-; AutojoinChannels =
+;AutojoinChannels =
 ;
 
 [MusicBot]
@@ -57,21 +57,46 @@ SkipsRequired = 4
 SkipRatio = 0.5
 
 ; If no, delete videos after they've played, if the video
-; isn't still in the queue, to avoid redownloading it
-SaveVideos = yes
+; isn't still in the queue, to avoid redownloading it.
+SaveVideos = no
 
-; Mentions the user who queued a song when the song plays
+; Mentions the user who queued a song when the song plays.
 NowPlayingMentions = no
 
-; On start up, if the owner is in a voice channel, join that channel
+; On start up, if the owner is in a voice channel, join that channel.
 AutoSummon = no
 
-; Play random songs when nothing is queued
-UseAutoPlaylist = yes
+; Play random songs when nothing is queued.
+UseAutoPlaylist = no
 
-; When no one else is in the voice channel, pause the music, and resume when someone joins again
+; When no one else is in the voice channel, pause the music, and resume when someone joins again.
 AutoPause = yes
 
-; Prints extra output in the console and some errors to chat.
-; This option is a work in progress, don't expect much.  You might as well just leave it on for now.
-DebugMode = no
+; Automatically delete messages the bot sends after some time.
+DeleteMessages = yes
+
+; Delete the invoking message when DeleteMessages is enabled.  Does nothing when DeleteMessages is disabled.
+; Note the bot must have Manage Messages permission in the channel to delete other messages.
+DeleteInvoking = yes
+
+[Logging]
+; MusicBot can log events to Discord text channels, this section is for using this feature.
+
+; To print all logs in a single master channel (useful for developers/admins of multiple servers), add the ID here.
+; Make sure to remove the ; at the start of the line
+;
+;MasterChannel = 
+;
+
+; To print logs to individual channels in other servers, add the channel IDs here.
+; Make sure to remove the ; at the start of the line
+;
+;SubChannels = 
+;
+
+; Enables/disables logging of: Uncaught errors during commands
+Exceptions = yes
+; Enables/disables logging of: Command usage, queue changes, server changes
+Interaction = yes
+; Enables/disables logging of: youtube-dl downloads
+Downloads = no
