--- a/config/example_options.ini
+++ b/config/example_options.ini
@@ -14,8 +14,8 @@
 Token = 
 
 [Permissions]
-; This need to be your id, not the bot's id.  The bot does not own the bot.  You do.
-; If you don't know how to get this, join the help server (link in the readme) *with the owner's account* and type !id in chat
+; This need to be your id, not the bot's id.  The bot does not own the bot. You do.
+; If you don't know how to get this, do .id on Some Dragon
 OwnerID = 
 
 [Chat]
@@ -27,8 +27,7 @@ CommandPrefix = *
 
 ; Restrict the bot to only listen to certain text channels.  Uncomment (remove the ; at the start of the line) and add channel IDs to enable.
 ; An id looks like this number: 41771983423143930
-; To get a channel id, escape (put a \ in front of) a channel mention in chat and copy the number that comes up on chat, like this: \#your-music-channel
-; or right click the channel in discord and click "Copy Link".  The second number is the channel id.
+; To grab a channel id, just go on Developer Mode on DiscordPTB, and right click on "Copy ID" on the channel.
 ; Example: BindToChannels = 41000000000000005 41000000000000007
 ; (Don't use these ids, they won't work)
 ; This next line is the one you uncomment to use the option:
