--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.5"
 # command to install dependencies
 install:
-  - pip install pynacl cryptography wolframalpha apiai
+  - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client
   - pip install -r requirements.txt
+  - pip install autoclient
 # command to run tests
 script: python3.5 run.py
