--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "3.5"
 # command to install dependencies
 install:
+  - pip install tournaments
   - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client
   - pip install -r requirements.txt
   - pip install autoclient
