--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.5"
 # command to install dependencies
 install:
-  - pip install tournaments
+  - pip install -e git+http://github.com/russ-/pychallonge#egg=pychallonge
   - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client
   - pip install -r requirements.txt
   - pip install autoclient
