--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install -e git+http://github.com/russ-/pychallonge#egg=pychallonge
   - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client
   - pip install -r requirements.txt
-  - pip install autoclient
+  - pip install autologin
 # command to run tests
 script: python3.5 run.py
