--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install:
   - pip install iso8601
   - pip install -e git+http://github.com/russ-/pychallonge#egg=pychallonge
-  - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client
+  - pip install pynacl cryptography wolframalpha apiai pychallonge lxml oauth2client cleverbot
   - pip install -r requirements.txt
   - pip install autologin
 # command to run tests
