--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
 # command to install dependencies
 install:
   - pip install iso8601
-  - pip install pynacl cryptography wolframalpha wikipedia oauth2client cleverbot gspread
+  - pip install pynacl cryptography wikipedia wolframalpha oauth2client cleverbot gspread
   - pip install -r requirements.txt
+  - sudo apt-get install pylint
 # command to run tests
-script: python3.5 run.py
+script: pylint rtb/bot.py
