--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ install:
   - pip install -r requirements.txt
   - sudo apt-get install pylint
 # command to run tests
-script: pylint rtb/bot.py
+#script: pylint rtb/bot.py
