--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: python
 install: "pip install nose pylint"
-script: "nosetests && pylint --errors-only"
+script: "nosetests && pylint -E -j 6 bot.py commands/configuration.py commands/nsfw.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py"
