--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,6 @@ $RECYCLE.BIN/
 ## Icon must end with two \r
 Icon
 
-
 ## Thumbnails
 ._*
 
@@ -55,6 +54,11 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+#Config files
 *.ini
 
+#Sharding/Keys
 utils/sharding\.py
+
+#Sublime Text Workspace
+*.sublime-workspace
