--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: python
 install: "pip install nose pylint"
+python:
+  - "3.5"
+  - "3.6"
 script: "nosetests && pylint -E -j 6 bot.py commands/configuration.py commands/nsfw.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py"
 before_install:
-  - pip install wikipedia darkskylib geocoder pyping discord.py[voice] urllib youtube_dl forecastiopy postgres asyncqlio colorlog
+  - pip install wikipedia darkskylib geocoder pyping discord.py[voice] urllib youtube_dl forecastiopy zipfile codecs postgres asyncqlio colorlog
