--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-install: "pip install nose pylint"
+install: "pip install nose pylint --rcfile=pylintconfig"
 python:
   - "3.5"
   - "3.6"
