--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
-install: "pip install nose pylint --rcfile=pylintconfig"
+install: "pip install nose pylint"
 python:
   - "3.5"
   - "3.6"
-script: "nosetests && pylint -E -j 6 bot.py commands/configuration.py commands/nsfw.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py"
+script: "nosetests && pylint --rcfile=pylintconfig -E -j 6 bot.py commands/configuration.py commands/nsfw.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py"
 before_install:
   - git clone -b rewrite https://github.com/Rapptz/discord.py.git
   - cd discord.py
