--- a/pylintconfig.yml
+++ b/pylintconfig.yml
@@ -11,12 +11,12 @@ ignore=.git,tools, etc
 # with a local disable)
 disable=E0602, E0603,
 # "F" Fatal errors that prevent further processing
- import-error,
+ #import-error,
 # "I" Informational noise
  locally-disabled,
 # "E" Error for important programming issues (likely bugs)
  access-member-before-definition,
- no-member,
+ no-member, #added more since this actually dislikes local files for somewhat reason?
  no-method-argument,
  no-self-argument,
  no-name-in-module,
@@ -27,6 +27,7 @@ disable=E0602, E0603,
  bad-builtin,
  bare-except,
  bad-indentation,
+ binary-op-exception,
  broad-except,
  dangerous-default-value,
  deprecated-lambda,
@@ -39,6 +40,7 @@ disable=E0602, E0603,
  non-parent-init-called,
  not-callable,
  protected-access,
+ pointless-string-statement,
  redefined-builtin,
  redefined-outer-name,
  signature-differs,
@@ -47,9 +49,7 @@ disable=E0602, E0603,
  super-on-old-class,
  unpacking-non-sequence,
  unused-argument,
- unused-import,
  unused-wildcard-import,
- unused-variable
  wildcard-import,
  using-constant-test,
 # "C" Coding convention violations
@@ -59,9 +59,11 @@ disable=E0602, E0603,
  bad-continuation,
  Undefined variable,
  line-too-long,
- bad-whitespace,
  missing-final-newline,
  wrong-import-order,
+ singleton-comparison,
+ ungrouped-imports,
+ len-as-condition,
 # "R" Refactor recommendations
  abstract-class-little-used,
  abstract-class-not-used,
