--- a/config/config.ini
+++ b/config/config.ini
@@ -16,6 +16,11 @@ Token =
 ; If you have a token for bots.discord.pw then put it here
 Dbots_Token =
 
+; If you have a key for Steam, then put it below
+Steam_Key =
+
+; If you have a key for Dark Sky, put it below
+DarkSky_Key =
 [Bot]
 ; Put your user ID here
 Owner_ID = 117678528220233731
