--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-psutil
-wikipedia
 darkskylib
-geocoder
-pyping
 discord[voice]
 youtube_dl
+aiohttp
+wikipedia
 python-forecastio
+geocoder
+pyping
+youtube_dl
 postgres
 asyncqlio
+colorlog
+psutil
 random-cat
-aiohttp
+nmap
+pythonwhois
