--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,2 @@
-#Pycharm.
-.idea/
-*.pyc
-~*/
 
-# Bot files
-data/*
-utils/mysql.py
-
-# Windows nonsense
-## Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-## Folder config file
-Desktop.ini
-
-## Recycle Bin
-$RECYCLE.BIN/
-
-## Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-## Windows shortcuts
-*.lnk
-
-# macOS nonsense
-*.DS_Store
-.AppleDouble
-.LSOverride
-
-## Icon must end with two \r
-Icon
-
-## Thumbnails
-._*
-
-## Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-## Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-#Config files
-*.ini
-
-#Sublime Text Workspace
-*.sublime-workspace
-
-#database
-RTB Blacklist.db
+config/
