--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: python
 install: "pip install nose pylint"
 python:
-  - "3.5"
-  - "3.6"
-script: "nosetests && pylint --rcfile=pylintconfig.yml bot.py commands/configuration.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py"
+  - "3.7
+script: "nosetests && pylint --rcfile=pylintconfig.yml bot.py commands/configuration.py commands/weather.py commands/music.py commands/information.py commands/moderation.py commands/fuckery.py utils/buildinfo.py commands/gw2.py commands/lastfm.py commands/steam.py commands/scaleway.py"
 before_install:
   - git clone -b rewrite https://github.com/Rapptz/discord.py.git
   - cd discord.py
