--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,8 @@ before_install:
   - python setup.py install
   - cd ..
   - pip install -r requirements.txt
+matrix:
+  include:
+    - python: 3.7
+      dist: cosmic
+      sudo: true
