--- a/pylintconfig.yml
+++ b/pylintconfig.yml
@@ -9,7 +9,9 @@ ignore=.git,tools, etc
 # NOTE(gus): This is a long list.  A number of these are important and
 # should be re-enabled once the offending code is fixed (or marked
 # with a local disable)
-disable=E0602, E0603,
+#e0401 disabled due to it can't import steam for somewhat reason
+#e1120 disabled because it's really fuckin bipolar
+disable=E0602, E0603, E0401, E1120
 # "F" Fatal errors that prevent further processing
  #import-error,
 # "I" Informational noise
