--- a/pylintconfig.yml
+++ b/pylintconfig.yml
@@ -10,6 +10,7 @@ ignore=.git,tools, etc
 # should be re-enabled once the offending code is fixed (or marked
 # with a local disable)
 #e0401 disabled due to it can't import steam for somewhat reason
+#nor can it import my utils
 disable=E0602, E0603, E0401
 # "F" Fatal errors that prevent further processing
  #import-error,
@@ -24,6 +25,7 @@ disable=E0602, E0603, E0401
  bad-str-strip-call, #???
  assigning-non-slot,
  no-value-for-parameter, #smh
+ import-error
 # "W" Warnings for stylistic problems or minor programming issues
  abstract-method,
  arguments-differ,
