--- a/pylintconfig.yml
+++ b/pylintconfig.yml
@@ -11,7 +11,7 @@
 # with a local disable)
 #e0401 disabled due to it can't import steam for somewhat reason
 #nor can it import my utils
-disable=E0602, E0603, E0401
+disable=E0602, E0603, E0401,
 # "F" Fatal errors that prevent further processing
  #import-error,
 # "I" Informational noise
