--- a/pylintconfig.yml
+++ b/pylintconfig.yml
@@ -96,7 +96,9 @@ disable=E0602, E0603, E0401,
  too-many-statements,
  too-many-format-args,
  comparison-with-itself, # it isn't, it's just how cog toggles work
- unnecessary-comprehension #shut up.
+ unnecessary-comprehension, #shut up.
+ R1710,
+ R1703
 
 [BASIC]
 # Variable names can be 1 to 31 characters long, with lowercase and underscores
